Remove OS spefic rules for system unit.
  Use SYSDEPS variable to add specific dependencies.
  Override FPC_SYTEM_OPT to add OS specific options.
  Use SYSTEMUNIT variable.

--- a/rtl/android/Makefile.fpc
+++ b/rtl/android/Makefile.fpc
@@ -59,6 +59,7 @@ TERMIODIR=$(LINUXINC)
 PTHREADINCDIR=$(LINUXINC)
 PTYPESINCDIR=$(LINUXINC)
 
+SYSTEMDIR = $(LINUXINC)
 SYSCALL_DEPS_OS=$(LINUXINC)/$(ARCH)/syscallh.inc $(LINUXINC)/$(ARCH)/sysnr.inc
 SYSUTILS_DEPS_OS=$(DLUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) $(ERRORSUNIT)$(PPUEXT)
 SYSUTILSDIR=$(UNIXINC)
@@ -134,10 +135,4 @@ prt0$(OEXT) : prt0.as
 dllprt0$(OEXT) : dllprt0.as
         $(AS) $(ASTARGET) -o $(UNITTARGETDIRPREFIX)dllprt0$(OEXT) --defsym CPU$(CPUBITS)=1 dllprt0.as
 
-#
-# $(SYSTEMUNIT) Units ($(SYSTEMUNIT), Objpas, Strings)
-#
-
-$(SYSTEMUNIT)$(PPUEXT) : $(LINUXINC)/$(SYSTEMUNIT).pp $(SYSDEPS)
-        $(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $(LINUXINC)/$(SYSTEMUNIT).pp
 
