Set SYSUTILSDIR to unix dir in linux Makefile.fpc

--- a/rtl/linux/Makefile
+++ b/rtl/linux/Makefile
@@ -890,6 +890,7 @@ PROCINC=$(RTL)/$(ARCH)
 UNIXINC=$(RTL)/unix
 PORTSDIR=$(RTL)/unix
 EXEINFO_DEPS_OS=$(DLUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT)
+SYSUTILSDIR=$(RTL)/unix
 SYSUTILS_DEPS_OS=$(SYSUTILS_UNIX_DEPS) $(LINUXUNIT)$(PPUEXT)
 UNITPREFIX=rtl
 NSOSDIR=$(NSDIR)/linux
