Makefile's regenerated after: Replace remaining SYSINITUNITS variable by SYSINIT_UNITS

--- a/rtl/amiga/Makefile
+++ b/rtl/amiga/Makefile
@@ -894,13 +894,13 @@ LOADERS=prt0
 OBJPASDIR=$(RTL)/objpas
 ifeq ($(ARCH),m68k)
 override LOADERS=
-SYSINITUNITS=si_prc
+SYSINIT_UNITS=si_prc
 RESUNIT=fpextres
 endif
 ifeq ($(ARCH),powerpc)
 override LOADERS=
 RESUNIT=$(FPINTRESUNIT)
-SYSINITUNITS=si_prc
+SYSINIT_UNITS=si_prc
 EXEUNITS=$(LINEINFOUNIT) $(EXEINFOUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),m68k-amiga)
@@ -910,10 +910,10 @@ ifeq ($(CPU_OS_TARGET),powerpc-amiga)
 override TARGET_UNITS+=$(SYSTEMUNIT) $(RESUNIT) $(HEAPTRCUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) buildrtl $(CPALLUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),m68k-amiga)
-override TARGET_IMPLICITUNITS+=$(SYSINITUNITS) $(EXEUNITS) athreads $(DOSUNIT) $(SYSUTILSUNIT) $(SYSCONSTUNIT) $(CTYPESUNIT) $(STRINGSUNIT) $(RTLCONSTSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT)  $(FGLUNIT) $(CLASSESUNIT) $(CHARACTERUNIT) $(GETOPTSUNIT) $(FPWIDESTRINGUNIT) $(CP_UNITS) $(UNICODEDATAUNIT) $(UFLOAT128UNIT)  $(UFLOATX80UNIT) $(SFPU128UNIT) $(SFPUX80UNIT) $(SOFTFPUUNIT)
+override TARGET_IMPLICITUNITS+=$(SYSINIT_UNITS) $(EXEUNITS) athreads $(DOSUNIT) $(SYSUTILSUNIT) $(SYSCONSTUNIT) $(CTYPESUNIT) $(STRINGSUNIT) $(RTLCONSTSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT)  $(FGLUNIT) $(CLASSESUNIT) $(CHARACTERUNIT) $(GETOPTSUNIT) $(FPWIDESTRINGUNIT) $(CP_UNITS) $(UNICODEDATAUNIT) $(UFLOAT128UNIT)  $(UFLOATX80UNIT) $(SFPU128UNIT) $(SFPUX80UNIT) $(SOFTFPUUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),powerpc-amiga)
-override TARGET_IMPLICITUNITS+=$(SYSINITUNITS) $(EXEUNITS) athreads $(DOSUNIT) $(SYSUTILSUNIT) $(SYSCONSTUNIT) $(CTYPESUNIT) $(STRINGSUNIT) $(RTLCONSTSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT)  $(FGLUNIT) $(CLASSESUNIT) $(CHARACTERUNIT) $(GETOPTSUNIT) $(FPWIDESTRINGUNIT) $(CP_UNITS) $(UNICODEDATAUNIT) $(UFLOAT128UNIT)  $(UFLOATX80UNIT) $(SFPU128UNIT) $(SFPUX80UNIT) $(SOFTFPUUNIT)
+override TARGET_IMPLICITUNITS+=$(SYSINIT_UNITS) $(EXEUNITS) athreads $(DOSUNIT) $(SYSUTILSUNIT) $(SYSCONSTUNIT) $(CTYPESUNIT) $(STRINGSUNIT) $(RTLCONSTSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT)  $(FGLUNIT) $(CLASSESUNIT) $(CHARACTERUNIT) $(GETOPTSUNIT) $(FPWIDESTRINGUNIT) $(CP_UNITS) $(UNICODEDATAUNIT) $(UFLOAT128UNIT)  $(UFLOATX80UNIT) $(SFPU128UNIT) $(SFPUX80UNIT) $(SOFTFPUUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),m68k-amiga)
 override TARGET_LOADERS+=$(LOADERS)
