--- a/rtl/aros/Makefile
+++ b/rtl/aros/Makefile
@@ -891,7 +891,7 @@ PROCINC=$(RTL)/$(CPU_TARGET)
 AMIINC=$(RTL)/amicommon
 UNITPREFIX=rtl
 LOADERS=prt0
-SYSINITUNITS=si_prc
+SYSINIT_UNITS=si_prc
 OBJPASDIR=$(RTL)/objpas
 ifeq ($(ARCH),i386)
 CPU_UNITS=$(CPUUNIT) $(MMXUNIT) $(LINEINFOUNIT)
@@ -909,13 +909,13 @@ ifeq ($(CPU_OS_TARGET),arm-aros)
 override TARGET_UNITS+=$(SYSTEMUNIT) $(HEAPTRCUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) buildrtl $(CPALLUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),i386-aros)
-override TARGET_IMPLICITUNITS+=$(SYSINITUNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CHARSETUNIT) $(GETOPTSUNIT)  $(EXEINFOUNIT)  $(CPU_UNITS) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT)  $(CP_UNITS) $(UNICODEDATAUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT) $(UFLOAT128UNIT)
+override TARGET_IMPLICITUNITS+=$(SYSINIT_UNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CHARSETUNIT) $(GETOPTSUNIT)  $(EXEINFOUNIT)  $(CPU_UNITS) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT)  $(CP_UNITS) $(UNICODEDATAUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT) $(UFLOAT128UNIT)
 endif
 ifeq ($(CPU_OS_TARGET),x86_64-aros)
-override TARGET_IMPLICITUNITS+=$(SYSINITUNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CHARSETUNIT) $(GETOPTSUNIT)  $(EXEINFOUNIT)  $(CPU_UNITS) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT)  $(CP_UNITS) $(UNICODEDATAUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT) $(UFLOAT128UNIT)
+override TARGET_IMPLICITUNITS+=$(SYSINIT_UNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CHARSETUNIT) $(GETOPTSUNIT)  $(EXEINFOUNIT)  $(CPU_UNITS) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT)  $(CP_UNITS) $(UNICODEDATAUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT) $(UFLOAT128UNIT)
 endif
 ifeq ($(CPU_OS_TARGET),arm-aros)
-override TARGET_IMPLICITUNITS+=$(SYSINITUNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CHARSETUNIT) $(GETOPTSUNIT)  $(EXEINFOUNIT)  $(CPU_UNITS) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT)  $(CP_UNITS) $(UNICODEDATAUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT) $(UFLOAT128UNIT)
+override TARGET_IMPLICITUNITS+=$(SYSINIT_UNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CHARSETUNIT) $(GETOPTSUNIT)  $(EXEINFOUNIT)  $(CPU_UNITS) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT)  $(CP_UNITS) $(UNICODEDATAUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT) $(UFLOAT128UNIT)
 endif
 ifeq ($(CPU_OS_TARGET),i386-aros)
 override TARGET_LOADERS+=$(LOADERS)
