--- a/rtl/macos/Makefile
+++ b/rtl/macos/Makefile
@@ -487,8 +487,8 @@ LINUXVCSUNIT=LinuxApi.Vcs
 LM3FURYUNIT=EmbeddedApi.lm3fury
 LM3TEMPESTUNIT=EmbeddedApi.lm3tempest
 LM4F120UNIT=EmbeddedApi.lm4f120
-LNFODWRFUNIT=System.LineInfo.Dwarf
-LNFOGDBUNIT=System.LineInfo.Gdb
+LNFODWRFUNIT=lnfodwrf
+LNFOGDBUNIT=lnfogdb
 LPC11XXUNIT=EmbeddedApi.lpc11xx
 LPC122XUNIT=EmbeddedApi.lpc122x
 LPC13XXUNIT=EmbeddedApi.lpc13xx
