--- a/rtl/openbsd/Makefile
+++ b/rtl/openbsd/Makefile
@@ -481,7 +481,7 @@ ISO7185UNIT=iso7185
 JDK15UNIT=JavaApi.JDK15
 KBDCALLSUNIT=OS2Api.kbdcalls
 LIBCUNIT=NetwareLibCApi.Libc
-LINEINFOUNIT=System.LineInfo
+LINEINFOUNIT=lineinfo
 LINUXUNIT=LinuxApi
 LINUXVCSUNIT=LinuxApi.Vcs
 LM3FURYUNIT=EmbeddedApi.lm3fury
