* Regen Makefiles with correct defines for some lineinfo units

--- a/rtl/amiga/Makefile
+++ b/rtl/amiga/Makefile
@@ -870,7 +870,6 @@ NS_SYSTEM=System.
 NS_CPUNITS=System.CodePages.
 NSDIR=$(RTL)/namespaced
 NSINC=$(NSDIR)/common
-OPT:=$(OPT) -dFPC_DOTTEDUNITS
 BASEINCLUDE=$(INC) $(PROCINC)
 BASESOURCE=$(INC) $(PROCINC) $($(COMMONUNIT))
 endif
@@ -2256,10 +2255,6 @@ endif
 ifndef NSWINDOWSDIR
 NSWINDOWSDIR=$(NSDIR)/windows
 endif
-ifdef FPC_DOTTEDUNITS
-MACPAS_OPT:=$(MACPAS_OPT) -dFPC_DOTTEDUNITS
-EXTPAS_OPT:=$(EXTPAS_OPT) -dFPC_DOTTEDUNITS
-endif
 ifndef SYSTEMUNITEXT
 SYSTEMUNITEXT=pp
 endif
@@ -2281,6 +2276,10 @@ FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
 OBJC_OPT:=$(OBJC_OPT) -dFPC_DOTTEDUNITS
 OBJCBASE_OPT:=$(OBJCBASE_OPT) -dFPC_DOTTEDUNITS
 FPCYLIX_OPT:=$(FPCYLIX_OPT) -dFPC_DOTTEDUNITS
+MACPAS_OPT:=$(MACPAS_OPT) -dFPC_DOTTEDUNITS
+EXTPAS_OPT:=$(EXTPAS_OPT) -dFPC_DOTTEDUNITS
+LINEINFO_OPT:=$(LINEINFO_OPT) -dFPC_DOTTEDUNITS
+LNFODWRF_OPT:=$(LNFODWRF_OPT) -dFPC_DOTTEDUNITS
 endif
 $(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMDIR)/$(SYSTEMUNIT).$(SYSTEMUNITEXT) $(SYSDEPS)
 	$(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $<
