--- a/packages/vcl-compat/tests/testcompat.lpi
+++ b/packages/vcl-compat/tests/testcompat.lpi
@@ -36,6 +36,10 @@
         <Filename Value="tciotuils.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="utcimagelist.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
