* System.JSON for Delphi compatibility

--- a/packages/vcl-compat/tests/testcompat.lpi
+++ b/packages/vcl-compat/tests/testcompat.lpi
@@ -56,6 +56,10 @@
         <Filename Value="utcnotifications.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="utcjson.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
