* System.Hash for Delphi compatibility

--- a/packages/vcl-compat/tests/testcompat.lpi
+++ b/packages/vcl-compat/tests/testcompat.lpi
@@ -64,6 +64,10 @@
         <Filename Value="utcpush.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="utchash.pp"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
