* Delphi-compatible Record-based Regex API

--- a/packages/vcl-compat/tests/testcompat.lpi
+++ b/packages/vcl-compat/tests/testcompat.lpi
@@ -72,6 +72,10 @@
         <Filename Value="utregex.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="utregexapi.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
