--- a/packages/testinsight/example/clienttest.lpi
+++ b/packages/testinsight/example/clienttest.lpi
@@ -39,18 +39,6 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="tcTests"/>
       </Unit>
-      <Unit>
-        <Filename Value="../fpcunittestinsight.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="../testinsightclient.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="../testinsightprotocol.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -60,7 +48,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value=".."/>
+      <OtherUnitFiles Value="../src"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
